app-in-namespace/pacman-04/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacman-04-argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: pacman-04-argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: pacman-04-dev-01
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: pacman-04-argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  name: pacman-04-dev-02
